@@ -12,6 +12,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5/21/15
 ---------------------
 
+2/24/16
+    - Add most_summary() function to summarize and print some summary
+      results. Moved from some of the test files into its own public
+      function. (Still very incomplete).
+
 2/22/16
     - (Tentatively) modify md_init() to initialize only what is needed to
       run loadmd() and most().
